# tau-biggz

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  _fix_session.py  _fix_session2.py  _fix_session4.py  _fix_session5.py  _patch_all.py  install.ps1  install.sh  mkdocs.yml  pyproject.toml
.github/workflows/: bump-and-release.yml  ci.yml  publish.yml  release.yml
dev-notes/: config-driven-providers.md  extensions.md  harnesses.md  sdk.md  tui-theme-format.md
docs/: 03-tools.md  04-sessions.md  configuration.md  custom-tui.md  getting-started.md  index.md  installation.md  providers.md
docs/architecture/: index.md  phase-20-2-thinking-controls.md  phase-20-installation-docs.md  phase-22-compaction-foundation.md  phase-23-tui-polish.md  phase-5-coding-tools.md
example_extensions/: demo_ext.py  greeting_ext.py  hello_ext.py  mcp.example.toml  oficina.toml  ui_status_ext.py
release-notes/: releases.json
tests/: apply-progress-mcp-mgr-tests.md  conftest.py  test_agent_harness.py  test_agent_loop.py  test_agent_types.py  test_agents.py  test_app_runner.py  test_approval_chain.py  test_cli.py  test_coding_session.py  test_coding_tools.py  test_commands.py  test_credentials.py  test_extension_ui.py  test_extensions.py  test_google_provider.py  test_harness.py  test_harness_sandbox.py  test_markdown.py  test_mcp_manager.py  test_models_sync.py  test_oauth.py  test_oauth_anthropic.py  test_oauth_device.py  test_oauth_github_copilot.py  test_oauth_registry.py  test_oauth_types.py  test_package_manager.py  test_package_metadata.py  test_paths.py  test_provider_add.py  test_provider_catalog.py  test_provider_config.py  test_provider_runtime.py  test_rendering.py  test_rpc.py  test_sandbox.py  test_session.py  test_session_compaction.py  test_session_export.py  (+20 more)
website/: hugo.toml
(+166 files in other folders)
