[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tau-biggz"
version = "0.1.10"
description = "A Python implementation of a minimalist Pi-style coding-agent harness."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.0",
    "httpx>=0.27",
    "mcp>=1.28.1",
    "packaging>=24.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "textual>=1.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://twotimespi.dev"
Documentation = "https://twotimespi.dev"
Repository = "https://github.com/biggs-100/tau-biggz"
Issues = "https://github.com/biggs-100/tau-biggz/issues"

[project.scripts]
tau = "tau_coding.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tau_ai", "src/tau_agent", "src/tau_coding"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["tau_ai", "tau_agent", "tau_coding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "tui: Textual TUI tests that require a display server (use xvfb-run on Linux).",
]

[tool.coverage.run]
source = ["tau_ai", "tau_agent", "tau_coding"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\b:",
    "def __repr__",
    "def __str__",
]
